squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-edge_cases-class_modify.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - fooinst
    - 1
num_locals: 2
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - Foo
                    - start: Start
                      end: End
                value:
                  data:
                    ClassDef:
                      parent: ~
                      members:
                        - - data:
                              Literal:
                                String: a
                            span:
                              start: Start
                              end: End
                          - data:
                              Literal:
                                Integer: 0
                            span:
                              start: Start
                              end: End
                        - - data:
                              Literal:
                                String: b
                            span:
                              start: Start
                              end: End
                          - data:
                              Literal:
                                Integer: 0
                            span:
                              start: Start
                              end: End
                      ctx:
                        class_kw_span:
                          start: Start
                          end: End
                        class_body_span:
                          start: Start
                          end: End
                        extends_kw_ty_span: ~
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  FieldAccess:
                    - data:
                        Ident: Foo
                      span:
                        start: Start
                        end: End
                    - - c
                      - start: Start
                        end: End
                value:
                  data:
                    Literal:
                      Integer: 0
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  FieldAccess:
                    - data:
                        Ident: Foo
                      span:
                        start: Start
                        end: End
                    - - constructor
                      - start: Start
                        end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 0
                      default_expr: []
                      local_names: []
                      num_locals: 0
                      upvalues: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - print
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            Literal:
                                              String: "Constructing Foo\n"
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionCall:
                      func:
                        Expr:
                          data:
                            Ident: Foo
                          span:
                            start: Start
                            end: End
                      args: []
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
