squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-edge_cases-closure_this.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
locals:
  - NamedReg: vargv
  - NamedReg: st
  - NamedReg: st2
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - show_this
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionDef:
                      keyword_span:
                        start: Start
                        end: End
                      arg_span:
                        start: Start
                        end: End
                      num_args: 0
                      default_expr: []
                      locals: []
                      is_varargs: false
                      body:
                        data:
                          Block:
                            - data:
                                Expr:
                                  data:
                                    FunctionCall:
                                      func:
                                        FieldAccess:
                                          - data: Globals
                                            span:
                                              start: Start
                                              end: End
                                          - - print
                                            - start: Start
                                              end: End
                                      args:
                                        - data:
                                            BinaryOp:
                                              op: Add
                                              op_span:
                                                start: Start
                                                end: End
                                              lhs:
                                                data:
                                                  BinaryOp:
                                                    op: Add
                                                    op_span:
                                                      start: Start
                                                      end: End
                                                    lhs:
                                                      data:
                                                        Literal:
                                                          String: "this: "
                                                      span:
                                                        start: Start
                                                        end: End
                                                    rhs:
                                                      data:
                                                        FieldAccess:
                                                          - data: This
                                                            span:
                                                              start: Start
                                                              end: End
                                                          - - whoami
                                                            - start: Start
                                                              end: End
                                                      span:
                                                        start: Start
                                                        end: End
                                                span:
                                                  start: Start
                                                  end: End
                                              rhs:
                                                data:
                                                  Literal:
                                                    String: "\n"
                                                span:
                                                  start: Start
                                                  end: End
                                          span:
                                            start: Start
                                            end: End
                                  span:
                                    start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - whoami
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      String: root
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - a
                    - start: Start
                      end: End
                value:
                  data:
                    TableDecl:
                      - - data:
                            Literal:
                              String: whoami
                          span:
                            start: Start
                            end: End
                        - data:
                            Literal:
                              String: a
                          span:
                            start: Start
                            end: End
                      - - data:
                            Literal:
                              String: show_this
                          span:
                            start: Start
                            end: End
                        - data:
                            Ident: show_this
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    Ident: show_this
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: Start
                      end: End
                value:
                  data:
                    FieldAccess:
                      - data:
                          Ident: a
                        span:
                          start: Start
                          end: End
                      - - show_this
                        - start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      Literal:
                        String: "-- Should be root --\n"
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: show_this
                    span:
                      start: Start
                      end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              RawCall:
                func:
                  data:
                    Ident: show_this
                  span:
                    start: Start
                    end: End
                this:
                  data:
                    FunctionCall:
                      func:
                        Expr:
                          data:
                            Ident: getroottable
                          span:
                            start: Start
                            end: End
                      args: []
                  span:
                    start: Start
                    end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Local:
                        - 1
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Local:
                        - 2
                        - start: Start
                          end: End
                    span:
                      start: Start
                      end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      Literal:
                        String: "-- Should be a --\n"
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data:
                        Ident: a
                      span:
                        start: Start
                        end: End
                    - - show_this
                      - start: Start
                        end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              RawCall:
                func:
                  data:
                    Ident: show_this
                  span:
                    start: Start
                    end: End
                this:
                  data:
                    Ident: a
                  span:
                    start: Start
                    end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              RawCall:
                func:
                  data:
                    Local:
                      - 1
                      - start: Start
                        end: End
                  span:
                    start: Start
                    end: End
                this:
                  data:
                    Ident: a
                  span:
                    start: Start
                    end: End
                args: []
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
